<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityMainScrollViewStyle"
    tools:context="com.example.android.mxbox.NowPlayingActivity">

    <RelativeLayout style="@style/ActivityNowPlayingRelativeLayoutStyle">

        <LinearLayout
            android:id="@+id/display_linear_layout"
            style="@style/ActivityNowPlayingLinearLayout01">

            <TextView
                android:id="@+id/song_name_text_view"
                style="@style/ActivityNowPlayingTextViewStyle01"
                android:text="@string/song_playing" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/seek_bar_linear_layout"
            style="@style/ActivityNowPlayingLinearLayout02"
            android:layout_below="@+id/display_linear_layout">

            <TextView
                style="@style/ActivityNowPlayingTextViewStyle03"
                android:text="@string/song_play_start" />

            <SeekBar style="@style/ActivityNowPlayingSeekbar" />

            <TextView
                style="@style/ActivityNowPlayingTextViewStyle03"
                android:text="@string/song_play_end" />

        </LinearLayout>


        <LinearLayout
            style="@style/ActivityNowPlayingLinearLayout02"
            android:layout_below="@+id/seek_bar_linear_layout">

            <ImageView
                style="@style/ActivityNowPlayingImageViewStyle01"
                android:src="@drawable/ic_shortcut_rewind" />

            <ImageView
                style="@style/ActivityNowPlayingImageViewStyle02"
                android:src="@drawable/ic_shortcut_pause" />

            <ImageView
                style="@style/ActivityNowPlayingImageViewStyle03"
                android:src="@drawable/ic_shortcut_forward" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>